--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Dodaj Google API Client -->
+<script src="https://apis.google.com/js/api.js"></script>
+
   </body>
 </html>
